--- a/src/components/button.astro
+++ b/src/components/button.astro
@@ -22,7 +22,7 @@ const { to, class: className, variant = "light" } = Astro.props;
 >
   <span class="relative z-10 font-semibold"><slot /></span>
   <Icon
-    name="arrow-left-circle"
+    name="arrow-right-circle"
     class="relative z-10 h-6 w-6 transition-all group-hover/button:text-main-600"
   />
 </a>
