--- a/src/pages/samples.astro
+++ b/src/pages/samples.astro
@@ -1,21 +1,11 @@
 ---
 import Icon from "astro-icon";
+import { getCollection } from "astro:content";
 
 import MainLayout from "~/layouts/main-layout.astro";
-
 import Title from "~/components/title.astro";
 
-import * as lpe from "./samples/lpe.mdx";
-import * as east63 from "./samples/east-63.mdx";
-
-const samples = [
-  lpe.frontmatter,
-  east63.frontmatter,
-  lpe.frontmatter,
-  east63.frontmatter,
-  lpe.frontmatter,
-  east63.frontmatter,
-];
+const samples = await getCollection("samples");
 ---
 
 <MainLayout
@@ -30,23 +20,23 @@ const samples = [
       {
         samples.map((sample) => (
           <a
-            href={sample.handle}
+            href={"/samples/" + sample.slug}
             class="flex aspect-[5/4] w-72 flex-shrink-0 basis-72 flex-col gap-8 rounded bg-white p-6"
           >
             <div class="flex justify-between">
               <div class="flex flex-col">
-                <h3 class="text-lg font-semibold">{sample.title}</h3>
-                <p>{sample.type}</p>
+                <h3 class="text-lg font-semibold">{sample.data.title}</h3>
+                <p>{sample.data.type}</p>
               </div>
               <Icon name="book-open" class="h-6 w-6" />
             </div>
-            <p>{sample.purpose}</p>
+            <p>{sample.data.purpose}</p>
             <div class="flex flex-row flex-wrap gap-2">
               <p class="rounded-full border-2 border-gray-200 px-3 py-1 text-sm text-gray-400">
-                {sample.area}
+                {sample.data.area}
               </p>
               <p class="rounded-full border-2 border-gray-200 px-3 py-1 text-sm text-gray-400">
-                {sample.where}
+                {sample.data.where}
               </p>
             </div>
           </a>
