--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,29 +10,23 @@ import Title from "~/components/title.astro";
   title="Welcome | Beth Freeman"
   description="Beth Freeman is a copywriter based in Brisbane"
 >
-  <main
-    class="grid flex-grow grid-cols-1 gap-24 px-8 pb-24 pt-12 md:grid-cols-2"
-  >
-    <div class="col-span-1">
-      <Title>
-        <span>Hello!</span>
-        <span>My name's Beth.</span>
-        <span>I write copy.</span>
-      </Title>
-    </div>
-    <div class="col-span-1">
-      <Content>
-        <p>
-          I am based in Brisbane, but I work with companies all over Australia
-          to refine their tone of voice and provide creative and high-quality
-          content with a personal touch.
-        </p>
-        <p>
-          Please feel free to peruse my work and see what strikes your fancy. I
-          look forward to hearing from you!
-        </p>
-        <Button to="/about" class="mt-4">Start Exploring</Button>
-      </Content>
-    </div>
-  </main>
+  <div class="flex flex-col gap-12">
+    <Title>
+      <span>Hello!</span>
+      <span>My name's Beth.</span>
+      <span>I write copy.</span>
+    </Title>
+    <Content>
+      <p>
+        I am based in Brisbane, but I work with companies all over Australia to
+        refine their tone of voice and provide creative and high-quality content
+        with a personal touch.
+      </p>
+      <p>
+        Please feel free to peruse my work and see what strikes your fancy. I
+        look forward to hearing from you!
+      </p>
+      <Button to="/about" class="mt-4">Start Exploring</Button>
+    </Content>
+  </div>
 </MainLayout>
