--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,16 +1,13 @@
 ---
 import Icon from "astro-icon";
 import Navigation from "./navigation.astro";
+import Brand from "./brand.astro";
 ---
 
 <header
   class="flex h-full flex-grow flex-col items-end gap-16 bg-gray-50 px-12 py-24"
 >
-  <div class="flex flex-col items-end gap-1">
-    <span aria-label="Writing Emoji" class="mb-4 text-3xl"> ✍🏻</span>
-    <p class="font-semibold">Beth Freeman</p>
-    <p class="text-gray-400">Freelance Copywriter</p>
-  </div>
+  <Brand />
   <Navigation />
   <div class="flex flex-col items-end gap-2">
     <p>Interested?</p>
