--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,6 +1,6 @@
-<footer class="flex justify-between gap-4 bg-gray-900 px-12 py-6">
+<footer class="flex w-full justify-between gap-4 bg-gray-900 p-6 md:px-12">
   <p class="text-white">© 2023</p>
   <p class="text-gray-500">
-    Made with <span aria-label="Coffee Emoji">☕️</span> by Jordan Accinelli
+    Jordan Accinelli <span aria-label="Coffee Emoji">☕️</span>
   </p>
 </footer>
