--- a/src/layouts/main-layout.astro
+++ b/src/layouts/main-layout.astro
@@ -25,7 +25,7 @@ const favicon =
       class="scrollbar-hide flex h-full w-full max-w-4xl flex-col overflow-y-scroll bg-white"
     >
       <div class="grid flex-grow grid-cols-1 md:grid-cols-3">
-        <main class="px-12 py-32 md:col-span-2">
+        <main class="px-8 py-32 md:col-span-2 md:px-12">
           <slot />
         </main>
         <Drawer />
