--- a/src/pages/samples.astro
+++ b/src/pages/samples.astro
@@ -12,23 +12,23 @@ const samples = await getCollection("samples");
   title="Samples | Beth Freeman"
   description="Some samples of copywriting Beth has collated to represent her flexiblity, tone, and writing style."
 >
-  <main class="grid grid-cols-1 gap-24 px-8 py-12 md:grid-cols-3">
+  <div class="flex flex-col gap-12">
     <Title>
       Here's a highlight reel of some of the best copy I've put together
     </Title>
-    <div class="scrollbar-hide col-span-2 flex gap-4 overflow-x-scroll">
+    <div class="flex flex-col gap-4">
       {
         samples.map((sample) => (
           <a
             href={"/samples/" + sample.slug}
-            class="flex aspect-[5/4] w-72 flex-shrink-0 basis-72 flex-col gap-8 rounded bg-white p-6"
+            class="flex flex-col gap-8 rounded bg-gray-50 p-6"
           >
             <div class="flex justify-between">
               <div class="flex flex-col">
                 <h3 class="text-lg font-semibold">{sample.data.title}</h3>
                 <p>{sample.data.type}</p>
               </div>
-              <Icon name="book-open" class="h-6 w-6" />
+              <Icon name="book-open" class="h-6 w-6 text-main-600" />
             </div>
             <p>{sample.data.purpose}</p>
             <div class="flex flex-row flex-wrap gap-2">
@@ -42,6 +42,11 @@ const samples = await getCollection("samples");
           </a>
         ))
       }
+      <div
+        class="rounded border-2 border-dashed border-gray-200 p-6 text-gray-400"
+      >
+        <p>And more to come...</p>
+      </div>
     </div>
-  </main>
+  </div>
 </MainLayout>
