--- a/src/components/button.astro
+++ b/src/components/button.astro
@@ -13,16 +13,18 @@ const { to, class: className, variant = "light" } = Astro.props;
 <a
   href={to}
   class:list={[
-    "group/button relative flex items-center gap-4 transition-all hover:gap-6",
+    "group/button relative flex items-center gap-4 transition-all hover:gap-6 flex-nowrap",
     "before:absolute before:-inset-y-3 before:-left-6 before:-right-4 before:rounded-full before:bg-transparent before:transition-all",
     variant === "light" && "text-black hover:before:bg-gray-50",
     variant === "dark" && "text-white hover:before:bg-black",
     className,
   ]}
 >
-  <span class="relative z-10 font-semibold"><slot /></span>
+  <span class="relative z-10 flex-shrink-0 whitespace-nowrap font-semibold">
+    <slot />
+  </span>
   <Icon
     name="arrow-right-circle"
-    class="relative z-10 h-6 w-6 transition-all group-hover/button:text-main-600"
+    class="relative z-10 h-6 w-6 flex-shrink-0 transition-all group-hover/button:text-main-600"
   />
 </a>
