--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,31 +11,27 @@ import Heading from "~/components/heading.astro";
   title="About | Beth Freeman"
   description="A personal summary about Beth, what she likes, and her personality."
 >
-  <main class="grid grid-cols-1 gap-24 px-8 py-12 md:grid-cols-2">
-    <div class="col-span-1 flex flex-col gap-8">
-      <Heading>
-        My name is Beth Freeman. I'm a Melbournian by blood but a Brisbanite by
-        heart, having moved up recently to get some much needed Vitamin D.
-      </Heading>
-      <Content>
-        <p>
-          On the clock, I'm a wordsmith. I have spent over 5 years developing my
-          portfolio as a freelance writer. Interested in learning more?
-        </p>
-        <Button to="/work">Read about my work</Button>
-        <hr class="my-4 h-1 w-full" />
-        <p>
-          In my spare time, I enjoy engaging with the great outdoors, and the
-          great indoors - I have a deep love of theatre and the arts.
-        </p>
-        <p>
-          I'm also a trivia fiend, having taken top 3 at our local trivia event
-          affectionately dubbed 'Bowlo Triviolo' for 4 consecutive weeks.
-        </p>
-      </Content>
-    </div>
-    <div class="col-span-1">
-      <FAQs />
-    </div>
-  </main>
+  <div class="flex flex-col gap-12">
+    <Heading>
+      My name is Beth Freeman. I'm a Melbournian by blood but a Brisbanite by
+      heart, having moved up recently to get some much needed Vitamin D.
+    </Heading>
+    <Content>
+      <p>
+        On the clock, I'm a wordsmith. I have spent over 5 years developing my
+        portfolio as a freelance writer. Interested in learning more?
+      </p>
+      <Button to="/work">Read about my work</Button>
+      <hr class="my-4 w-full border-t-2 border-gray-100" />
+      <p>
+        In my spare time, I enjoy engaging with the great outdoors, and the
+        great indoors - I have a deep love of theatre and the arts.
+      </p>
+      <p>
+        I'm also a trivia fiend, having taken top 3 at our local trivia event
+        affectionately dubbed 'Bowlo Triviolo' for 4 consecutive weeks.
+      </p>
+    </Content>
+    <FAQs />
+  </div>
 </MainLayout>
