--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,10 +1,10 @@
 ---
 import MainLayout from "~/layouts/main-layout.astro";
 
-import FAQs from "~/components/faqs.astro";
 import Button from "~/components/button.astro";
 import Content from "~/components/content.astro";
 import Heading from "~/components/heading.astro";
+import Favs from "~/components/favs.astro";
 ---
 
 <MainLayout
@@ -32,6 +32,6 @@ import Heading from "~/components/heading.astro";
         affectionately dubbed 'Bowlo Triviolo' for 4 consecutive weeks.
       </p>
     </Content>
-    <FAQs />
+    <Favs />
   </div>
 </MainLayout>
