--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Title from "~/components/title.astro";
 >
   <div class="flex flex-col gap-12">
     <Title>
-      <span>Hello!</span>
+      <span class="text-main-600">Hello!</span>
       <span>My name's Beth.</span>
       <span>I write copy.</span>
     </Title>
