fix: ammended seo

--- a/src/layouts/main-layout.astro
+++ b/src/layouts/main-layout.astro
@@ -17,7 +17,7 @@ const favicon =
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href={favicon} />
     <!-- SEO -->
-    <title>{title}</title>
+    <title>{title} | Beth Freeman</title>
     <meta name="description" content={description} />
   </head>
   <body class="flex h-full flex-col items-center justify-stretch bg-gray-100">
