--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ import Favs from "~/components/favs.astro";
 ---
 
 <MainLayout
-  title="About | Beth Freeman"
+  title="About"
   description="A personal summary about Beth, what she likes, and her personality."
 >
   <div class="flex flex-col gap-12">
