--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -28,7 +28,7 @@ const work = [
 ---
 
 <MainLayout
-  title="Work | Beth Freeman"
+  title="Work"
   description="A brief summary of Beth's professional history"
 >
   <div class="flex flex-col gap-12">
