--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -27,7 +27,7 @@ const links: Links = [
         class="nav-link"
         href={link.href}
         class:list={[
-          "relative flex items-center gap-1 transition-all",
+          "relative flex items-center gap- transition-all",
           "after:absolute after:-right-12 after:bottom-0 after:top-0 after:w-0.5 after:transition-all",
           "hover:text-gray-500 hover:after:bg-gray-300",
           "aria-current:font-semibold aria-current:text-main-600 aria-current:after:bg-main-500",
