--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Title from "~/components/title.astro";
 ---
 
 <MainLayout
-  title="Welcome | Beth Freeman"
+  title="Welcome"
   description="Beth Freeman is a copywriter based in Brisbane"
 >
   <div class="flex flex-col gap-12">
