--- a/src/components/content.astro
+++ b/src/components/content.astro
@@ -1,3 +1,13 @@
-<div class="flex w-full max-w-lg flex-col items-start gap-4">
+---
+type Props = {
+  class?: string;
+};
+
+const { class: className } = Astro.props;
+---
+
+<div
+  class:list={["flex w-full max-w-lg flex-col items-start gap-4", className]}
+>
   <slot />
 </div>
