--- a/src/pages/samples/[slug].astro
+++ b/src/pages/samples/[slug].astro
@@ -1,9 +1,11 @@
 ---
 import { getCollection } from "astro:content";
+
+import MainLayout from "~/layouts/main-layout.astro";
+
 import Content from "~/components/content.astro";
 import Heading from "~/components/heading.astro";
 import Pill from "~/components/pill.astro";
-import MainLayout from "~/layouts/main-layout.astro";
 
 export async function getStaticPaths() {
   const samples = await getCollection("samples");
@@ -23,25 +25,27 @@ const { Content: Markdown } = await entry.render();
 
 <MainLayout title={entry.data.title} description={entry.data.purpose}>
   <div class="flex flex-col gap-12">
-    <div class="flex gap-2 text-gray-400">
-      <a href="/samples" class="text-black">Samples</a>
-      <span>/</span>
-      <p>{entry.data.title}</p>
-    </div>
     <Content>
+      <div class="flex gap-2 text-gray-400">
+        <a href="/samples">Samples</a>
+        <span>/</span>
+        <p class="text-main-600">{entry.data.title}</p>
+      </div>
       <Heading>{entry.data.title}</Heading>
       <p>
         {entry.data.purpose}
       </p>
     </Content>
     <hr class="w-full border-t-2 border-gray-100" />
-    <Content>
-      <Markdown class="prose" />
+    <Content
+      class="prose prose-headings:m-0 prose-headings:text-xl prose-headings:text-black prose-p:m-0"
+    >
+      <Markdown />
     </Content>
     <hr class="w-full border-t-2 border-gray-100" />
-    <div class="flex items-center justify-between gap-2">
+    <div class="flex items-center justify-between gap-8">
       <p class="font-semibold">Tags</p>
-      <div class="flex items-center gap-2">
+      <div class="flex flex-wrap items-center gap-2">
         <Pill>{entry.data.type}</Pill>
         <Pill>{entry.data.area}</Pill>
         <Pill>{entry.data.where}</Pill>
