fix: mailto links

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -12,7 +12,7 @@ import Brand from "./brand.astro";
   <div class="flex flex-col items-end gap-2">
     <p>Interested?</p>
     <a
-      href="mailto://beth-freeman@outlook.com"
+      href="mailto:beth-freeman@outlook.com"
       class="group flex items-center gap-4"
     >
       <Icon
