--- a/src/layouts/main-layout.astro
+++ b/src/layouts/main-layout.astro
@@ -1,6 +1,6 @@
 ---
-import "@fontsource-variable/inter";
 import "~/styles/index.css";
+import "~/styles/fonts.css";
 
 import Drawer from "~/components/drawer.astro";
 import Footer from "~/components/footer.astro";
