--- a/src/pages/samples/index.astro
+++ b/src/pages/samples/index.astro
@@ -1,11 +1,10 @@
 ---
-import Icon from "astro-icon";
 import { getCollection } from "astro:content";
 
 import MainLayout from "~/layouts/main-layout.astro";
 import Heading from "~/components/heading.astro";
 import Content from "~/components/content.astro";
-import Pill from "~/components/pill.astro";
+import SampleCard from "~/components/sample-card.astro";
 
 const samples = await getCollection("samples");
 ---
@@ -24,27 +23,7 @@ const samples = await getCollection("samples");
       </p>
     </Content>
     <div class="flex flex-col gap-4">
-      {
-        samples.map((sample) => (
-          <a
-            href={"/samples/" + sample.slug}
-            class="flex flex-col gap-8 rounded bg-gray-50 p-6 transition-all hover:bg-gray-100"
-          >
-            <div class="flex justify-between">
-              <div class="flex flex-col">
-                <h3 class="text-lg font-semibold">{sample.data.title}</h3>
-                <p>{sample.data.type}</p>
-              </div>
-              <Icon name="book-open" class="h-6 w-6 text-main-600" />
-            </div>
-            <p>{sample.data.purpose}</p>
-            <div class="flex flex-row flex-wrap gap-2">
-              <Pill>{sample.data.area}</Pill>
-              <Pill>{sample.data.where}</Pill>
-            </div>
-          </a>
-        ))
-      }
+      {samples.map((sample) => <SampleCard sample={sample} />)}
       <div
         class="rounded border-2 border-dashed border-gray-200 p-6 text-gray-400"
       >
