--- a/src/pages/samples/[slug].astro
+++ b/src/pages/samples/[slug].astro
@@ -1,4 +1,5 @@
 ---
+import Icon from "astro-icon";
 import { getCollection } from "astro:content";
 
 import MainLayout from "~/layouts/main-layout.astro";
@@ -6,31 +7,31 @@ import MainLayout from "~/layouts/main-layout.astro";
 import Content from "~/components/content.astro";
 import Heading from "~/components/heading.astro";
 import Pill from "~/components/pill.astro";
+import SampleCard from "~/components/sample-card.astro";
+import SectionHeader from "~/components/section-header.astro";
+import Button from "~/components/button.astro";
 
 export async function getStaticPaths() {
   const samples = await getCollection("samples");
-  return samples.map((sample) => ({
+  return samples.map((sample, index) => ({
     params: {
       slug: sample.slug,
     },
     props: {
       entry: sample,
+      next: samples?.[index + 1] ?? samples[0],
     },
   }));
 }
 
-const { entry } = Astro.props;
+const { entry, next } = Astro.props;
 const { Content: Markdown } = await entry.render();
 ---
 
 <MainLayout title={entry.data.title} description={entry.data.purpose}>
   <div class="flex flex-col gap-12">
     <Content>
-      <div class="flex gap-2 text-gray-400">
-        <a href="/samples">Samples</a>
-        <span>/</span>
-        <p class="text-main-600">{entry.data.title}</p>
-      </div>
+      <Icon name="book-open" class="h-6 w-6 text-main-600" />
       <Heading>{entry.data.title}</Heading>
       <p>
         {entry.data.purpose}
@@ -38,18 +39,26 @@ const { Content: Markdown } = await entry.render();
     </Content>
     <hr class="w-full border-t-2 border-gray-100" />
     <Content
-      class="prose prose-headings:m-0 prose-headings:text-xl prose-headings:text-black prose-p:m-0"
+      class="prose prose-headings:m-0 prose-headings:text-xl prose-headings:font-semibold prose-headings:text-black prose-p:m-0"
     >
       <Markdown />
     </Content>
     <hr class="w-full border-t-2 border-gray-100" />
-    <div class="flex items-center justify-between gap-8">
-      <p class="font-semibold">Tags</p>
-      <div class="flex flex-wrap items-center gap-2">
-        <Pill>{entry.data.type}</Pill>
-        <Pill>{entry.data.area}</Pill>
-        <Pill>{entry.data.where}</Pill>
+    <div class="flex w-full flex-col gap-4">
+      <div class="flex justify-between bg-white">
+        <p class="text-gray-400">Type</p>
+        <p>{entry.data.type}</p>
+      </div>
+      <div class="flex justify-between bg-white">
+        <p class="text-gray-400">Area</p>
+        <p>{entry.data.area}</p>
+      </div>
+      <div class="flex justify-between bg-white">
+        <p class="text-gray-400">Location</p>
+        <p>{entry.data.where}</p>
       </div>
     </div>
+    <hr class="w-full border-t-2 border-gray-100" />
+    <SampleCard sample={next} next />
   </div>
 </MainLayout>
