fix: nav links not having trailing slash

--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -9,9 +9,9 @@ const pathname = Astro.url.pathname;
 
 const links: Links = [
   { title: "Home", href: "/" },
-  { title: "About", href: "/about" },
-  { title: "Work", href: "/work" },
-  { title: "Samples", href: "/samples" },
+  { title: "About", href: "/about/" },
+  { title: "Work", href: "/work/" },
+  { title: "Samples", href: "/samples/" },
 ].map((link) => {
   return {
     ...link,
