feat: made links handle better

--- a/src/components/contact-form.astro
+++ b/src/components/contact-form.astro
@@ -80,5 +80,5 @@
   }
 
   const form = document.querySelector<HTMLFormElement>("#contact-form");
-  form.addEventListener("submit", handleSubmit);
+  form?.addEventListener("submit", handleSubmit);
 </script>
