--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -1,41 +1,19 @@
 ---
+import NavLink from "./nav-link.astro";
+
 type Links = {
   title: string;
   href: string;
-  isCurrent: boolean;
 }[];
-
-const pathname = Astro.url.pathname;
 
 const links: Links = [
   { title: "Home", href: "/" },
   { title: "About", href: "/about/" },
   { title: "Work", href: "/work/" },
   { title: "Samples", href: "/samples/" },
-].map((link) => {
-  return {
-    ...link,
-    isCurrent: link.href === pathname,
-  };
-});
+];
 ---
 
 <nav class="flex flex-col items-end gap-4">
-  {
-    links.map((link) => (
-      <a
-        class="nav-link"
-        href={link.href}
-        class:list={[
-          "relative flex items-center font-medium transition-all",
-          "after:absolute after:-right-12 after:bottom-0 after:top-0 after:w-0.5 after:transition-all",
-          "hover:text-gray-500 hover:after:bg-gray-300",
-          "aria-current:font-semibold aria-current:text-main-600 aria-current:after:bg-main-500",
-        ]}
-        aria-current={link.isCurrent && "page"}
-      >
-        {link.title}
-      </a>
-    ))
-  }
+  {links.map((link) => <NavLink href={link.href}>{link.title}</NavLink>)}
 </nav>
