fix: contact form endpoint

--- a/src/components/contact-form.astro
+++ b/src/components/contact-form.astro
@@ -69,7 +69,7 @@
       body: data,
     };
 
-    fetch("/contact/", options)
+    fetch("/", options)
       .then(() => {
         form.dataset.success = "true";
       })
