--- a/src/components/favs.astro
+++ b/src/components/favs.astro
@@ -49,7 +49,7 @@ const favs: Favs = [
   <hr class="col-span-2 border-t-2 border-gray-100" />
   <Button
     class="col-span-1 justify-self-start"
-    to="mailto:beth-freeman@outlook.com"
+    to="/contact/"
   >
     Think I'm wrong?
   </Button>
