feat: content update

--- a/src/components/favs.astro
+++ b/src/components/favs.astro
@@ -11,7 +11,7 @@ type Favs = {
 const favs: Favs = [
   {
     question: "Favourite Music Genre",
-    answer: "Modern Jazz",
+    answer: "Indie Grunge",
   },
   {
     question: "Favourite Game Show",
@@ -47,10 +47,7 @@ const favs: Favs = [
     ))
   }
   <hr class="col-span-2 border-t-2 border-gray-100" />
-  <Button
-    class="col-span-1 justify-self-start"
-    to="/contact/"
-  >
+  <Button class="col-span-1 justify-self-start" to="/contact/">
     Think I'm wrong?
   </Button>
 </section>
