--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -6,12 +6,12 @@ import NavLink from "./nav-link.astro";
 ---
 
 <header
-  class="flex h-full flex-grow flex-col items-end gap-16 bg-gray-50 px-12 py-24"
+  class="flex h-full flex-grow flex-col items-end gap-16 bg-gradient-to-tr from-main-400 to-main-600 px-12 py-24"
 >
   <Brand />
   <Navigation />
   <div class="flex flex-col items-end gap-2">
-    <p class="font-semibold">Interested?</p>
+    <p class="font-semibold text-white">Interested?</p>
     <NavLink href="/contact/">Get In Touch</NavLink>
   </div>
 </header>
