--- a/src/layouts/main-layout.astro
+++ b/src/layouts/main-layout.astro
@@ -20,9 +20,11 @@ const favicon =
     <title>{title} | Beth Freeman</title>
     <meta name="description" content={description} />
   </head>
-  <body class="flex h-full flex-col items-center justify-stretch bg-gray-100">
+  <body
+    class="flex h-full flex-col items-center justify-stretch bg-gradient-to-tr from-main-950 to-main-900 p-4"
+  >
     <div
-      class="scrollbar-hide flex h-full w-full max-w-4xl flex-col overflow-y-scroll bg-white"
+      class="scrollbar-hide flex h-full w-full max-w-4xl flex-col overflow-y-scroll rounded-md bg-white"
     >
       <div class="grid flex-grow grid-cols-1 md:grid-cols-3">
         <main class="px-8 py-32 md:col-span-2 md:px-12">
