--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,13 +13,12 @@ import Favs from "~/components/favs.astro";
 >
   <div class="flex flex-col gap-12">
     <Heading>
-      My name is Beth Freeman. I'm a Melbournian by blood but a Brisbanite by
-      heart, having moved up recently to get some much needed Vitamin D.
+      My name is Beth Freeman. <br /> I've monetised being a bookworm.
     </Heading>
     <Content>
       <p>
         On the clock, I'm a wordsmith. I have spent over 5 years developing my
-        portfolio as a freelance writer. Interested in learning more?
+        portfolio as a freelance writer.
       </p>
       <Button to="/work">Read about my work</Button>
       <hr class="my-4 w-full border-t-2 border-gray-100" />
@@ -28,8 +27,8 @@ import Favs from "~/components/favs.astro";
         great indoors - I have a deep love of theatre and the arts.
       </p>
       <p>
-        I'm also a trivia fiend, having taken top 3 at our local trivia event
-        affectionately dubbed 'Bowlo Triviolo' for 4 consecutive weeks.
+        I'm also a trivia fiend, and I love to write about any topic under the
+        sun so I can get more knowledge under my belt.
       </p>
     </Content>
     <Favs />
