--- a/src/pages/samples/[slug].astro
+++ b/src/pages/samples/[slug].astro
@@ -39,7 +39,7 @@ const { Content: Markdown } = await entry.render();
     </Content>
     <hr class="w-full border-t-2 border-gray-100" />
     <Content
-      class="prose prose-headings:m-0 prose-headings:text-xl prose-headings:font-semibold prose-headings:text-black prose-p:m-0"
+      class="prose prose-headings:m-0 prose-headings:font-semibold prose-headings:text-black prose-p:m-0"
     >
       <Markdown />
     </Content>
