--- a/src/components/brand.astro
+++ b/src/components/brand.astro
@@ -8,6 +8,6 @@ const { class: className } = Astro.props;
 
 <div class:list={["flex flex-col items-end gap-1", className]}>
   <span aria-label="Writing Emoji" class="mb-4 text-3xl">✍🏻</span>
-  <p class="font-semibold">Beth Freeman</p>
-  <p class="text-gray-400">Freelance Copywriter</p>
+  <p class="font-semibold text-white">Beth Freeman</p>
+  <p class="text-main-200">Freelance Copywriter</p>
 </div>
