--- a/src/components/drawer.astro
+++ b/src/components/drawer.astro
@@ -5,7 +5,7 @@ import Header from "./header.astro";
 
 <div
   class:list={[
-    "fixed inset-x-0 top-0 z-40",
+    "fixed inset-x-4 top-4 z-40 rounded-md",
     "flex items-center justify-between p-4",
     "bg-white/70 backdrop-blur",
     "md:hidden",
