feat: ammended content

--- a/src/pages/samples/index.astro
+++ b/src/pages/samples/index.astro
@@ -17,9 +17,11 @@ const samples = await getCollection("samples");
     <Heading>Work Samples</Heading>
     <Content>
       <p>
-        Here's a highlight reel of some of the best copy I've put together. It's
-        a curated selection of the best work I've done over my years as a
-        copywriter
+        Welcome, friend! Are you curious to see what my work looks like in action? What a great coincidence - here you are on a page showing a curated selection of work I've done over my years as a
+        copywriter. 
+      </p>
+      <p>
+        If you don't find what you're looking for, reach out to me and I'll send through some more examples. Happy browsing!
       </p>
     </Content>
     <div class="flex flex-col gap-4">
