--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -27,12 +27,12 @@ const work = [
 ];
 
 const highlights = [
-  "Published articles on the The Mighty and netting over 10,000 postive responses.",
+  "Publishing articles on the The Mighty and netting over 10,000 postive responses.",
   "Partnering with Bonsey Jaden to deliver exceptional copy to clients.",
-  "Working ad lead copywriter for multi million dollar real estate development, East 63.",
-  "Leading accessible communications training for an NDIS provider",
+  "Working as lead copywriter for multi million dollar real estate development, East 63.",
+  "Developing and presenting internal communications training for an NDIS provider.",
   "Conquering compliance in medical marketing with Splice",
-  "Helping small businesses find their unique tone of voice.",
+  "Helping small businesses find their unique tone of voice, especially in the healthcare and fashion spaces.",
 ];
 ---
 
