feat: fixed metadata

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,7 +9,7 @@ import Favs from "~/components/favs.astro";
 
 <MainLayout
   title="About"
-  description="A personal summary about Beth, what she likes, and her personality."
+  description="A personal summary about me, what I like, and my personality."
 >
   <div class="flex flex-col gap-12">
     <Heading>
