--- a/src/pages/samples/index.astro
+++ b/src/pages/samples/index.astro
@@ -11,7 +11,7 @@ const samples = await getCollection("samples");
 
 <MainLayout
   title="Samples"
-  description="Some samples of copywriting Beth has collated to represent her flexiblity, tone, and writing style."
+  description="Some samples of copywriting I've collated to represent her flexiblity, tone, and writing style."
 >
   <div class="flex flex-col gap-12">
     <Heading>Work Samples</Heading>
