--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Title from "~/components/title.astro";
   <div class="flex flex-col gap-12">
     <Title>
       <span class="text-main-600">Hello!</span>
-      <span>My name's Beth.</span>
+      <span>My name is Beth.</span>
       <span>I write copy.</span>
     </Title>
     <Content>
