fix: added plausible tracking

--- a/src/layouts/main-layout.astro
+++ b/src/layouts/main-layout.astro
@@ -34,5 +34,6 @@ const favicon =
       </div>
       <Footer />
     </div>
+    <script defer data-domain="bfreeman.me" src="https://plausible.io/js/script.js"></script>
   </body>
 </html>
